[project]
name = "clusterspider"
version = "0.1.0"
description = "Modular Reconnaissance Framework"
requires-python = ">=3.11"
dependencies = [
    "dnspython>=2.4.0",
    "python-whois>=0.9.4",
    "aiohttp>=3.9.0",
]

[project.scripts]
clusterspider = "clusterspider.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
