[project]
name = "clusterspider"
version = "0.2.0"
description = "OSINT Aggregation & Graph Analysis Platform"
requires-python = ">=3.11"
dependencies = [
    "dnspython>=2.4.0",
    "python-whois>=0.9.4",
    "aiohttp>=3.9.0",
    # Web framework
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sse-starlette>=2.0.0",
    # Graph database
    "neo4j>=5.17.0",
    # Task queue
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "argon2-cffi>=23.1.0",
    "cryptography>=42.0.0",
    # Config
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    # Reports
    "weasyprint>=61.0",
    "jinja2>=3.1.0",
    # Utilities
    "httpx>=0.27.0",
    "robotexclusionrulesparser>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "aioresponses>=0.7.6",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[project.scripts]
clusterspider = "clusterspider.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["clusterspider*"]
